modules/alb-sg/alb-sg.tf
resource "aws_security_group" "alb-sg" {
  vpc_id      = var.vpc_id
  name        = "DEMO-ALB-SG"
  description = "security group that allows ssh and all egress traffic"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }


}
